Fix tile content scroll: hide scrollbar, fill card area properly

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
 }
 
 /* Hide scrollbar for snap scroll container */
+.hide-scrollbar {
+  scrollbar-width: none;
+}
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
